cmake_minimum_required(VERSION 3.28)
project(monopoly)

set(CMAKE_CXX_STANDARD 17)

add_executable(monopoly
        Board.cpp
        Board.cpp
        Card.cpp
        Square.cpp
        Square.hpp
        kindSquare.hpp
        kindSquare.hpp
        kindSquare.cpp
        Player.hpp
        Player.cpp
        Demo.cpp
        Monopoly.hpp
        Monopoly.cpp
        Vertex.cpp)
